sis_sources/tests/errors/missing_key_compound_assign.sis
pin arr = [];
pin val = arr[0][0];
